fix(packages/app): update "total catastrophe" rendering
Fixes #1042

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -10,7 +10,7 @@
     <link href="${cssHome}ui.css" rel="stylesheet" type="text/css" >
     <link href="${cssHome}left-tab-stripe.css" rel="stylesheet" type="text/css" >
     <link href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="shortcut icon" href="${imageHome}${favicon}">
 
@@ -247,8 +247,9 @@
     </main>
 
     <div id='restart-needed-warning'>
+      <i class='fas fa-heart-broken'></i>
       <div class='restart-needed-warning-content'>
-        The Shell has been updated. Please quit and restart to pick up the changes.
+        A severe error occurred during launch
       </div>
     </div>
     </body>
