feat(packages/app): queue up input while commands are executed
Fixes #1044

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -246,6 +246,8 @@
       </div> <!-- tab-container -->
     </main>
 
+    <textarea id='invisible-global-input' autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea>
+
     <div id='restart-needed-warning'>
       <i class='fas fa-heart-broken'></i>
       <div class='restart-needed-warning-content'>
