--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -145,6 +145,12 @@ header .header-nav-list {
 }
 
 /* REPL */
+#invisible-global-input {
+    /* element that handles text input while a command is being executed */
+    position: absolute;
+    left: -1000px;
+    top: -1000px;
+}
 body.still-loading .repl {
     opacity: 0;
 }
