--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
@@ -12,7 +12,7 @@ body[kui-theme="Atelier"] {
     --color-base06: #cfe8cf;
     --color-base07: #f4fbf4;
     --color-base08: #e6193c;
-    --color-base09: #87711d;
+    --color-base09: hsl(48, 65%, 50%); /* dialed L from 32% #87711d */
     --color-base0A: hsl(60, 70%, 41%); /* dialed L from 35% #98981b */
     --color-base0B: #29a329;
     --color-base0C: #1999b3;
