--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -71,6 +71,7 @@
 	    <div class="repl-input">
 	      <div class="repl-prompt"><span class='repl-prompt-lefty'></span><span class='repl-context clickable'>/wsk/actions</span><span class='repl-selection clickable' title='The current selection'></span><span class='repl-prompt-righty'><i class="fas fa-angle-right"></i></span></div>
 	      <input type="text"
+                     class="repl-input-element"
                      autofocus
                      autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"
                      xxx_no_placeholder="enter your command">
