feat: switch from IBM Plex Mono to Roboto Mono
Fixes #1074

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -2856,7 +2856,7 @@ body {
     --color-scrollbar-track: transparent;
 
     --font-sans-serif: "IBM Plex Sans", sans-serif;
-    --font-monospace: "IBM Plex Mono","DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier,monospace;
+    --font-monospace: "Roboto Mono",Courier,monospace;
 
     --color-carbon-components-h3: var(--color-cyan);
     --color-hover-primary-text: var(--color-cyan);
