fix: improved about window UI
Fixes #1103

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -2472,6 +2472,8 @@ sidecar .usage-error-wrapper .hideable {
 .page-content p {
     font-weight: 400;
     line-height: 1.5em;
+}
+.page-content p:not(:last-child) {
     padding: 0 0 0.5rem;
 }
 .page-content h1 {
