--- a/plugins/plugin-editor/web/css/dark.css
+++ b/plugins/plugin-editor/web/css/dark.css
@@ -75,8 +75,13 @@ body[kui-theme-style="dark"] .monaco-editor .comment {
     color: var(--color-base03);
 }
 
+body[kui-theme-style="dark"] .monaco-editor .mtk7 {
+    /* comments */
+    transition: color 300ms ease-in-out;
+    color: var(--color-text-02);
+}
+
 body[kui-theme-style="dark"] .monaco-editor .mtk20,
-body[kui-theme-style="dark"] .monaco-editor .mtk7,
 body[kui-theme-style="dark"] .monaco-editor .string,
 body[kui-theme-style="dark"] .monaco-editor .title,
 body[kui-theme-style="dark"] .monaco-editor .section,
