fix(packages/app): remove direction: rtl from sidecar header
Fixes #1111

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -957,8 +957,8 @@ sidecar .sidecar-header-name-content .entity-name {
     white-space: nowrap;
 
     /* these two rules help us to simulate left-ellision */
-    direction: rtl;
-    text-align: left;
+    /* direction: rtl;
+    text-align: left; */
 }
 sidecar .sidecar-header-name-content > span {
     display: block;
