--- a/plugins/plugin-tutorials/web/css/main.css
+++ b/plugins/plugin-tutorials/web/css/main.css
@@ -114,14 +114,14 @@
 
 .project-config-container .config-item-title {
     color: var(---color-stripe-02);
-    font-size: 1.25rem;
+    font-size: 1.25em;
     font-weight: 400;
     white-space: nowrap;
 }
 
 .project-config-container .configSourceIns {
-    font-size: 0.875rem;
-    margin-bottom: 1rem;
+    font-size: 0.875em;
+    margin-bottom: 1em;
 }
 
 /* config links, e.g. API Documentation link */
@@ -195,27 +195,27 @@
 /* copied from the carbon components styling */
 .bx--form-item {
     flex: 1;
-    margin-right: 1rem;
-    margin-bottom: 1.5rem;
+    margin-right: 1em;
+    margin-bottom: 1.5em;
 }
-.bx--form-item:last-child {
+/* .bx--form-item:last-child {
     margin-bottom: 0;
-}
+} */
 .bx--label {
-    font-size: 0.875rem;
+    font-size: 0.875em;
     font-weight: 600;
     display: inline-block;
     vertical-align: baseline;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.5em;
 }
 .bx--text-input {
-    font-size: 0.875rem;
+    font-size: 0.875em;
     display: block;
     width: 100%;
-    height: 2.5rem;
-    min-width: 10rem;
-    padding: 0 1rem;
-    background-color: rgba(61, 112, 178, 0.1);
+    height: 2.5em;
+    min-width: 10em;
+    padding: 0 1em;
+    background-color: var(--color-field-01);
     border: 1px solid transparent;
 }
 .bx--btn--primary:focus, .bx--btn--primary:hover:not([disabled]) {
@@ -310,7 +310,7 @@ button.bx--btn {
     vertical-align: middle;
 }
 .bx--structured-list-row.bx--structured-list-row--header-row {
-    border-bottom: 2px solid var(--color-brand-01);
+    border-bottom: 2px solid var(--color-content-divider);
     cursor: inherit;
 }
 .bx--structured-list-row {
@@ -323,13 +323,13 @@ button.bx--btn {
 }
 .bx--structured-list-th {
     padding-left: 0;
-    padding-right: 2rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    font-size: 0.75rem;
+    padding-right: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    /* font-size: 0.75rem; */
     display: table-cell;
     font-weight: 600;
-    height: 2.5rem;
+    height: 2.5em;
     text-align: left;
     text-transform: none;
     vertical-align: bottom;
@@ -350,14 +350,14 @@ button.bx--btn {
     font-size: 0.875em;
     line-height: 1.5;
     padding-left: 0;
-    padding-right: 2rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-right: 2em;
+    padding-top: 1em;
+    padding-bottom: 1em;
     position: relative;
     display: table-cell;
 }
 .bx--structured-list-td:last-child {
-    padding-right: 2rem;
+    padding-right: 1em;
 }
 
 
