--- a/plugins/plugin-tutorials/web/css/tutorials.css
+++ b/plugins/plugin-tutorials/web/css/tutorials.css
@@ -24,8 +24,11 @@ body.tutorial-in-progress.tutorial-is-fullscreen tab {
     box-shadow: 0 0 1ex var(--color-ui-02);
     transition: all 300ms ease-in-out;
 }
+body[kui-theme-style="dark"] #tutorialPane.minimized {
+    background-color: var(--color-ui-06);
+}
 #tutorialPane.visible {
-    flex-basis: 26rem;
+    flex-basis: 26em;
     transition-duration: 600ms;
 }
 
@@ -218,13 +221,14 @@ body.tutorial-in-progress.tutorial-is-fullscreen tab {
     width: 2em;
     height: 2em;
     border: 4px solid var(--color-ui-05);
+    margin: 0 1px;
     background: var(--color-ui-04);
     transition: all 500ms ease-in-out;
-    filter: opacity(0.33) blur(1px);
+    filter: opacity(0.5) blur(1px);
 }
 #tutorialPane .tutorial-step-block.active, #tutorialPane .tutorial-step-block:hover {
-    background: var(--color-support-03);
-    filter: opacity(0.8);
+    background: var(--color-base09);
+    filter: opacity(1);
 }
 #tutorialPane .tutorial-step-block:hover {
     cursor: pointer;
@@ -355,6 +359,7 @@ body.tutorial-in-progress.tutorial-is-fullscreen tab {
 }
 #tutorialPane.visible.minimized {
     flex-basis: 14em;
+    border-top: 1px solid var(--color-base01);
 }
 #tutorialPane.minimized .tutorial-hide-when-minimized {
     margin: 0;
@@ -480,6 +485,10 @@ body.tutorial-in-progress.tutorial-is-fullscreen tab {
 }
 #tutorialPane[data-rendering-hints="full-width-table"] .tutorial-top .tutorial-right .tutorial-content-extras-as-structured-list:nth-child(2n) {
     margin-right: 1em;
+}
+#tutorialPane:not([tutorial-is-fullscreen]) .tutorial-content-extras-as-structured-list:only-child h2 {
+    /* don't show the header for single-child case */
+    display: none;
 }
 
 /*@media screen and (max-width: 1064px) {
