--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/atelier-seaside.css
@@ -9,7 +9,7 @@ body[kui-theme="Atelier"] {
     --color-base03: hsl(120, 9%, 20%); /* dialed L from 45% #687d68 */
     --color-base04: #809980;
     --color-base05: hsl(120, 13%, 85%); /* dialed L from 60% #8ca68c */
-    --color-base06: #cfe8cf;
+    --color-base06: hsla(120, 35%, 92%, 1); /* dialed L from 86% #cfe8cf */
     --color-base07: #f4fbf4;
     --color-base08: #e6193c;
     --color-base09: hsl(48, 65%, 50%); /* dialed L from 32% #87711d */
