--- a/plugins/plugin-core-support/web/css/text-search.css
+++ b/plugins/plugin-core-support/web/css/text-search.css
@@ -76,3 +76,15 @@ body.subwindow #search-bar.visible {
     color: var(--color-text-02);
     font-size: 0.75rem;
 }
+
+/* when the search stripe is not visible, make sure the search input is not event worthy */
+#search-bar:not(.visible) #search-input {
+    display: none;
+    pointer-events: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;    
+}
