fix(packages/app): text selection regression
Fixes #1174

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:data2" value="${ogData2}" />
   </head>
 
-  <body class='still-loading not-tabbable ${bodyCss}'><div class="page">
+  <body class='still-loading ${bodyCss}'><div class="page">
     <main class="main">
       <div class='left-tab-stripe'>
         <div class="application-icon" id="about-button" style="background-image:url('${largeIcon}')"></div>
