--- a/plugins/plugin-bash-like/web/css/xterm.css
+++ b/plugins/plugin-bash-like/web/css/xterm.css
@@ -27,7 +27,7 @@ tab.xterm-alt-buffer-mode .repl-output, tab.xterm-alt-buffer-mode .repl-block, t
     padding: 0;
 }
 
-tab:not(.xterm-alt-buffer-mode) .xterm-rows > div:empty {
+tab:not(.xterm-alt-buffer-mode) .xterm:not(.special-handling-of-trailing-empty-rows) .xterm-rows > div:empty {
     display: none;
 }
 
