--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -871,7 +871,7 @@ sidecar .sidecar-header .header-main-content {
 }
 sidecar .header-right-bits {
     white-space: nowrap;
-    margin: 1em;
+    margin: 0 1em;
 }
 .sidecar-header .kind {
     font-variant: small-caps;
