--- a/plugins/plugin-core-support/web/css/screenshot.css
+++ b/plugins/plugin-core-support/web/css/screenshot.css
@@ -1,20 +1,20 @@
-body:not([data-presentation="FixedSize"]).screenshot-squish, body:not([data-presentation="FixedSize"]).screenshot-squish .screenshot-squish {
+body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish {
     align-items: flex-start !important;
 }
-body:not([data-presentation="FixedSize"]).screenshot-squish .repl-output {
+body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish .repl-output {
     padding: 0 1em 1em;
 }
-body:not([data-presentation="FixedSize"]).screenshot-squish .repl-block {
+body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish .repl-block {
     align-items: flex-start;
 }
-body:not([data-presentation="FixedSize"]).screenshot-squish sidecar.screenshot-squish {
+body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish sidecar {
     height: initial;
 }
-body:not([data-presentation="FixedSize"]).screenshot-squish .custom-content, body:not([data-presentation="FixedSize"]) .sidecar-content.screenshot-squish {
+body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish {
     flex: initial;
 }
-body:not([data-presentation="FixedSize"]).screenshot-squish #wskflowDiv.screenshot-squish {
-    height: auto;
+body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish .custom-content, body:not([data-presentation="FixedSize"]) tab.visible.screenshot-squish .sidecar-content {
+    flex: initial;
 }
 
 .screenshot-squish .hide-with-screenshot {
