--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/solarized-dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/solarized-dark.css
@@ -8,7 +8,7 @@ body[kui-theme="Solarized"] {
     --color-base01: #073642;
     --color-base02: #586e75;
     --color-base03: hsla(196, 13%, 45%, 0.2); /* versus #657b83 from the theme; dialed down opacity to bring it closer to base02 */
-    --color-base04: hsl(186, 8%, 64%); /* dialed up to L=64% from 55% versus #839496 */
+    --color-base04: #9ca9ab; /* hsl(186, 8%, 64%), which is dialed up to L=64% from 55% versus #839496 */
     --color-base05: hsl(180, 7%, 72%); /* dialed up to L=72% from 60% versus: #93a1a1 */
     --color-base06: #eee8d5;
     --color-base07: #fdf6e3;
