--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -560,7 +560,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 .entity-name-group:not(.header-cell) .entity-name[data-key="NAME"], .result-as-table .bold {
     font-weight: 500;
 }
-body[kui-theme-style="dark"] .result-table:not(.result-table-with-custom-entity-colors) .entity-name-group:not(.header-cell) .entity-name[data-key="NAME"], .result-table:not(.result-table-with-custom-entity-colors) .bold {
+body[kui-theme-style="dark"] .repl-result:not(.result-table-with-custom-entity-colors) .entity-name-group:not(.header-cell) .entity-name[data-key="NAME"], .repl-result:not(.result-table-with-custom-entity-colors) .bold {
     /* in dark mode, emphasize the entity name, unless
    (.result-table-with-custom-entity-colors) the client has requested
    control over entity colors */
