fix(packages/app): fix sidecar multi-table ui
Fixes #1255

Signed-off-by: Mengting Yan <mengting.yan1@ibm.com>

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -222,8 +222,7 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
 .scrollable[data-table-max-rows="10"], .scrollable-auto[data-table-max-rows="10"] {
     max-height: calc(10 * 3em + 2px);
 }
-.result-as-table .result-table-outer {
-    /* repl table */
+.result-as-multi-table .result-table-outer {
     display: table-cell;
 }
 .result-as-fixed-tables.result-as-table .result-table-outer {
